--- a/eureka-gateway/src/main/resources/application.yml
+++ b/eureka-gateway/src/main/resources/application.yml
@@ -5,6 +5,16 @@ server:
 spring:
   application:
     name: spcloud-gateway
+  cloud:
+    gateway:
+      routes:
+        - id: gateway-to-baidu
+          uri: http://www.baidu.com
+          predicates:
+          - Path=/baidu
+          filters:
+            # StripPrefix：去除原始请求路径中的前1级路径，即/gateway
+            - StripPrefix=1
 #设置注册中心地址
 eureka:
   client:
